--- a/pkt/Cargo.toml
+++ b/pkt/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2018"
 name = "pkt"
-version = "0.1.11"
+version = "0.1.12-alpha"
 description = "A packet construction library"
 authors = ["Gianni Tedesco <gianni@scaramanga.co.uk>"]
 license = "MIT"
