--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ include = [
  "Cargo.toml",
  "README.md",
  "LICENSE.txt",
+ "examples-data/*",
  "examples/*.rsyn",
  "doc/grammar.bnf",
  "doc/parser.dot",
@@ -47,12 +48,12 @@ ezpkt = { path = "ezpkt", version = "0.1.12-alpha" }
 
 lazy-regex = "2.5"
 regex = "1.8"
-phf = { version = "0.11", features = ["macros"] }
+phf = { version = "0.10", features = ["macros"] }
 
 # For cli
-atty = { version = "0.2.14", optional = true}
+atty = { version = "0.2", optional = true}
 termcolor = {version = "1.2", optional = true}
-clap = {version = "4.1", optional = true}
+clap = {version = "3.2", optional = true}
 
 [[bin]]
 name = "resynth"
