--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2018"
 name = "resynth"
-version = "0.1.12-alpha"
+version = "0.2.0"
 description = "A packet synthesis language"
 authors = ["Gianni Tedesco <gianni@scaramanga.co.uk>"]
 license = "MIT"
@@ -42,17 +42,17 @@ lto = true
 [workspace]
 
 [dependencies]
-pkt = { path = "pkt", version = "0.1.12-alpha" }
-ezpkt = { path = "ezpkt", version = "0.1.12-alpha" }
+pkt = { path = "pkt", version = "0.2.0" }
+ezpkt = { path = "ezpkt", version = "0.2.0" }
 
 lazy-regex = "2.5"
-regex = "1.8"
+regex = "1.9.5"
 phf = { version = "0.11", features = ["macros"] }
 
 # For cli
 atty = { version = "0.2.14", optional = true}
 termcolor = {version = "1.2", optional = true}
-clap = {version = "4.1", optional = true}
+clap = {version = "4.1", optional = true, features = ["cargo"]}
 
 [[bin]]
 name = "resynth"
