--- a/ezpkt/Cargo.toml
+++ b/ezpkt/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2018"
 name = "ezpkt"
-version = "0.1.12-alpha"
+version = "0.2.0"
 description = "A packet construction library"
 authors = ["Gianni Tedesco <gianni@scaramanga.co.uk>"]
 license = "MIT"
@@ -25,4 +25,4 @@ include = [
 ]
 
 [dependencies]
-pkt = { path = "../pkt", version = "0.1.12-alpha" }
+pkt = { path = "../pkt", version = "0.2.0" }
