--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 edition = "2018"
 name = "resynth"
-version = "0.1.12-alpha"
+version = "0.2.0"
 description = "A packet synthesis language"
 authors = ["Gianni Tedesco <gianni@scaramanga.co.uk>"]
 license = "MIT"
@@ -42,8 +42,8 @@ lto = true
 [workspace]
 
 [dependencies]
-pkt = { path = "pkt", version = "0.1.12-alpha" }
-ezpkt = { path = "ezpkt", version = "0.1.12-alpha" }
+pkt = { path = "pkt", version = "0.2.0" }
+ezpkt = { path = "ezpkt", version = "0.2.0" }
 
 lazy-regex = "2.5"
 regex = "1.8"
