--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ ezpkt = { path = "ezpkt", version = "0.3.0" }
 
 lazy-regex = "2.5"
 regex = "1.9.5"
+concat-with = "0.2.9"
 phf = { version = "0.11", features = ["macros"] }
 
 # For cli
