--- a/cortex.yaml
+++ b/cortex.yaml
@@ -8,6 +8,9 @@ info:
       repository: rapid7/resynth
   x-cortex-tag: resynth
   x-cortex-type: service
+  x-cortex-groups:
+    - target:library
+    - exposure:opensource
   x-cortex-domain-parents:
   - tag: network-sensor
 openapi: 3.0.1
