--- a/ezpkt/Cargo.toml
+++ b/ezpkt/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 edition = "2018"
 name = "ezpkt"
-version = "0.3.0"
+version = "0.4.0-dev"
 description = "A packet construction library"
 authors = ["Gianni Tedesco <gianni@scaramanga.co.uk>"]
 license = "MIT"
-homepage = "https://github.com/giannitedesco/resynth"
-repository = "https://github.com/giannitedesco/resynth"
+homepage = "https://github.com/rapid7/resynth"
+repository = "https://github.com/rapid7/resynth"
 readme = "README.md"
 keywords = [
  "packets",
@@ -25,4 +25,4 @@ include = [
 ]
 
 [dependencies]
-pkt = { path = "../pkt", version = "0.3.0" }
+pkt = { path = "../pkt", version = "0.4.0-dev" }
